--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.6.2'
     compile 'com.google.android.gms:play-services-location:11.6.2'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.volley:volley:1.0.0'
+
 }
