--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- The API key for both Google Maps API and Google Places API-->
+
+        <!-- The API key for both Google Maps API and Google Places API -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <!--<meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />-->
-
+        <!--
+            <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+        -->
 
         <activity
             android:name=".NewMaps"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Launcher"
             android:label="@string/title_activity_launcher"
@@ -37,6 +39,10 @@
         <activity
             android:name=".PlacePicker"
             android:label="@string/title_activity_place_picker"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".PlaceDetails"
+            android:label="@string/title_activity_place_details"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
